[2017-04-03] --

## Added

- README.Rmd
- Option to output DAG as EPS file


//

[2017-04-02] --

- Initial commit

## Added
- makeDAG function to save, view, or embed DAGs
- All initial updates to DESCRIPTION, NAMESPACE, etc.