@@ -6,7 +6,9 @@ Description: This package allows the user the save directed acyclic graphs (DAGs
 Depends: R (>= 3.3.2)
 Imports: DiagrammeR,
          DiagrammeRsvg,
-         rsvg
+         rsvg,
+         knitr,
+         pacman
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
