@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 export(makeDAG)
+export(quickDAG_setup)
 import(DiagrammeR)
 import(DiagrammeRsvg)
 import(rsvg)
