@@ -1,0 +1,9 @@
+.onAttach <- function(libname, pkgname) {
+
+  packageStartupMessage(
+
+  "Welcome to quickDAG! If this is your first time running the package, please run quickDAG_setup()."
+
+  )
+
+}
